[package]
name = "cft"
version = "3.0.0"
edition = "2021"
authors = ["Your Name"]
description = "Enhanced Cloudflare Tunnel & API Manager"

[dependencies]
# CLI 框架
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
colored = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# 表格显示
comfy-table = "7"

# 其他工具
chrono = "0.4"
anyhow = "1"

[[bin]]
name = "cft"
path = "src/main.rs"