[package]
name = "opentunnel"
version = "0.1.0"
edition = "2021"
authors = ["openTunnel Contributors"]
description = "An open-source CLI for managing Cloudflare Tunnels, DNS, Zero Trust Access & monitoring"
license = "MIT"
repository = "https://github.com/user/openTunnel"

# CLI framework
[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.dialoguer]
version = "0.11"

[dependencies.colored]
version = "2"

# Serialization
[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

# HTTP client
[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["full"]

# Table display
[dependencies.comfy-table]
version = "7"

# Error handling
[dependencies.anyhow]
version = "1"

[dependencies.thiserror]
version = "2"

# Utilities
[dependencies.chrono]
version = "0.4"

[dependencies.dirs]
version = "6"

[dependencies.ctrlc]
version = "3"

[dependencies.base64]
version = "0.22"

[dependencies.rand]
version = "0.9"

[[bin]]
name = "tunnel"
path = "src/main.rs"
